--- a/quoco-rmi/auldfellas/pom.xml
+++ b/quoco-rmi/auldfellas/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.1</version>
         </dependency>
     </dependencies>
 
@@ -30,7 +30,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
-                    <mainClass>Auldfella</mainClass>
+                    <mainClass>Server</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -43,7 +43,7 @@
                     <configuration>
                         <archive>
                         <manifest>
-                            <mainClass>Auldfella</mainClass>
+                            <mainClass>Server</mainClass>
                         </manifest>
                         </archive>
                         <descriptorRefs>
