--- a/quoco-rmi/dodgydrivers/pom.xml
+++ b/quoco-rmi/dodgydrivers/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>core</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+        </dependency>
     </dependencies>
 
 
@@ -26,7 +31,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
-                    <mainClass>Dodgydriver</mainClass>
+                    <mainClass>Server</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -39,7 +44,7 @@
                     <configuration>
                         <archive>
                         <manifest>
-                            <mainClass>Dodgydriver</mainClass>
+                            <mainClass>Server</mainClass>
                         </manifest>
                         </archive>
                         <descriptorRefs>
