--- a/quocu-rmi-2/broker/pom.xml
+++ b/quocu-rmi-2/broker/pom.xml
@@ -55,6 +55,23 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.4.10</version>
+                <executions>
+                    <execution>
+                    <id>tag-latest</id>
+                        <goals>
+                            <goal>build</goal><goal>tag</goal><goal>push</goal>
+                        </goals>
+                        <configuration>
+                            <repository>${project.artifactId}</repository>
+                            <tag>latest</tag>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin> -->
         </plugins>
     </build>
 
