--- a/quoco-ws/pom.xml
+++ b/quoco-ws/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>labs</groupId>
-    <artifactId>quoco-rmi</artifactId>
+    <groupId>lab3</groupId>
+    <artifactId>quoco-ws</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
