--- a/quoco-ws/auldfellas/pom.xml
+++ b/quoco-ws/auldfellas/pom.xml
@@ -16,6 +16,13 @@
             <artifactId>core</artifactId>
             <version>0.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jmdns</groupId>
+            <artifactId>jmdns</artifactId>
+            <version>3.5.5</version>
+        </dependency>
+        
     </dependencies>
     <build>
         <plugins>
