--- a/quoco-ws/client/pom.xml
+++ b/quoco-ws/client/pom.xml
@@ -16,6 +16,17 @@
             <artifactId>core</artifactId>
             <version>0.0.1</version>
         </dependency>
+
+        <!-- <dependency>
+            <groupId>com.sun.org.apachi.xml.internal</groupId>
+            <artifactId>resolver</artifactId>
+            <version>20050927</version>
+        </dependency> -->
+        <dependency>
+            <groupId>org.jmdns</groupId>
+            <artifactId>jmdns</artifactId>
+            <version>3.5.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -51,6 +62,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 </project>
