--- a/quoco-rest/client/pom.xml
+++ b/quoco-rest/client/pom.xml
@@ -51,7 +51,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>client.Client</mainClass>
                 </configuration>
             </plugin>
 
